--- a/index.html
+++ b/index.html
@@ -63,12 +63,44 @@ margin-top: 1 px;
   display: none; /* Chrome, Safari */
 }
 .video-card {
-  min-width: 200px;
+  width: 200px;
   height: 120px;
   background-color: #ccc;
   border-radius: 8px;
   flex-shrink: 0;
-}/* Botão seta lateral */
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Inter', sans-serif;
+  font-weight: bold;
+  color: black;
+}
+
+.video-card:hover {
+  background-color: #5865f2; /* mesma cor de hover dos botões */
+  transform: scale(1.05);    /* aumenta suavemente igual aos botões */
+  cursor: pointer;
+  color: white;
+}
+
+@media (max-width: 768px) {
+  .video-card {
+    width: 150px;
+    height: 90px;
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .video-card {
+    width: 120px;
+    height: 80px;
+    font-size: 0.8rem;
+  }
+}
+
+
 .scroll-arrow {
   position: absolute;
   top: 50%; /* centraliza verticalmente dentro da .video-wrapper */
