--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ margin-top: 1 px;
   overflow-x: scroll;
   scroll-behavior: smooth;
   gap: 1rem;
-  padding: 1rem 0;
+  padding: 1rem 3rem;
   scrollbar-width: none; /* Firefox */
 }
 
