--- a/index.html
+++ b/index.html
@@ -197,6 +197,16 @@ margin-top: 1 px;
   cursor: pointer;
   position: relative;
 }
+@media (max-width: 768px) {
+  .video-container {
+    padding: 0 5px;
+  }
+
+  .video-card {
+    margin: 4px 2px;
+  }
+}
+
 
 .video-card:hover {
   background-color: #5865f2; /* mesma cor de hover dos botões */
