--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>patounic 🍿</title>
   <link rel="icon" href="https://media.discordapp.net/attachments/1381522672558669843/1392046188693553262/1333894209119453256.webp?width=86&height=86" />
   <style>
+@media (max-width: 768px) {
+  .video-wrapper .scroll-arrow {
+    display: block !important;
+  }
+}
+
 .video-info {
   position: absolute;
   bottom: 0;
