--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="icon" href="https://media.discordapp.net/attachments/1381522672558669843/1392046188693553262/1333894209119453256.webp?width=86&height=86" />
   <style>
 @media (max-width: 768px) {
+  .video-row {
+    padding: 1rem 0.3rem; /* Quase colado — ajuste para 0 se quiser 100% colado */
+  }
+}
+
+@media (max-width: 768px) {
   .video-wrapper .scroll-arrow {
     display: block !important;
   }
