--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ html, body {
   <!-- Barra de ícones fixa no topo -->
   <div class="icon-bar" id="icon-bar">
     <div id="movie-icon" class="movie-icon" title="Filmes 🎬">
-      <img src="https://media.discordapp.net/attachments/1382924288213909536/1392386153495265280/814226494367858728.webp?ex=686f5828&is=686e06a8&hm=48c0ba30b4dc6a5bd0417c022431f299c0dd828aa89675a4438824e5f1d407fd&=&animated=true&width=59&height=86" alt="Filmes">
+      <img src="https://images-ext-1.discordapp.net/external/vD9l_ynVFznVhvpcuwUQdraBe7lTlDDXe6-gooXePoA/%3Fsize%3D96%26animated%3Dtrue/https/cdn.discordapp.com/emojis/1388155536951738483.webp?animated=true&width=86&height=86" alt="Filmes">
     </div>
 
     <!-- Menu Dropdown -->
