--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ html, body {
 
   <!-- COMUNICADO (Agora fora da icon-bar e fora da video-wrapper) -->
   <div class="comunicado">
-    📢 <strong>Aviso:</strong> Novo conteúdo disponível hoje!
+    📢 <strong>Estamos em constante atualização!</strong> 
   </div>
 
 <div class="video-wrapper">
