--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 .comunicado {
   position: absolute;
-  top: 70px;
+  top: 90px;
   left: 50%;
   transform: translateX(-50%);
   background-color: #222;
@@ -705,6 +705,8 @@ html, body {
   <!-- COMUNICADO (Agora fora da icon-bar e fora da video-wrapper) -->
   <div class="comunicado">
     📢 <strong>Estamos em constante atualização!</strong> 
+Minha meta aqui é trazer o melhor para vocês, Em breve vou adicionar um "💡" pra me dizerem oque querem aqui.
+Se tão usando podem reclamar e pedir, vamos fazer essa pr** ser melhor que tudo!
   </div>
 
 <div class="video-wrapper">
