--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ html, body {
 
   background-image:
     linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 0%, rgba(0, 0, 0, 0.95) 80%),
-    url("https://i.pinimg.com/736x/c1/2e/c1/c12ec185ed91b3926ab7a897ed288aec.jpg");
+    url("https://media.discordapp.net/attachments/1382924288213909536/1392475444992802826/Picsart_25-07-09_13-56-16-028_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30.png?ex=68705411&is=686f0291&hm=4c86d1518557b86a017db4c41834bb4f1496b56445e55113c29b6425c0c227a2&=&format=webp&quality=lossless&width=967&height=967");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
