--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
   <title>patounic 🍿</title>
   <link rel="icon" href="https://media.discordapp.net/attachments/1381522672558669843/1392046188693553262/1333894209119453256.webp?width=86&height=86" />
   <style>
+.section {
+  margin: 1rem 0;
+}
+
+.section-title {
+  margin-top: 1.2rem;
+  margin-bottom: 0.8rem;
+  text-align: center;
+}
+
+.section-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: 'Inter', sans-serif;
+  margin: 0 1.5rem 0.5rem;
+}
+
+.ver-mais {
+  font-size: 0.95rem;
+  font-weight: normal;
+  color: #aaa;
+  cursor: pointer;
+}
+
+.ver-mais:hover {
+  text-decoration: underline;
+}
+
 .container-principal {
   position: relative;
   padding-top: 100px; /* espaço para o comunicado não sobrepor */
@@ -701,7 +733,10 @@ html, body {
       </div>
     </div>
   </div>
-
+<div class="section">
+  <div class="section-title">
+    Aleatórios 
+  </div>
 <div class="video-wrapper">
   <div class="video-row" id="video-row">
     <!-- Cards com thumbnails e abertura de vídeo -->
@@ -747,7 +782,10 @@ html, body {
 </button>
   </div>
 </div>
-
+<div class="section">
+  <div class="section-title">
+    Aleatórios 2
+</div>
 <div class="video-wrapper">
   <div class="video-row" id="video-row-2">
     <div class="video-card">Vídeo 7</div>
