--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ margin-top: 1 px;
 
 
 #register-container {
-  background-image: url("https://media.discordapp.net/attachments/1382924288213909536/1392481545780068392/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30.png?ex=686fb0ff&is=686e5f7f&hm=9003b6fbd5ea37fe347145a2e629372c1ae96727110bfb0c3e394762c0e2698c&=&format=webp&quality=lossless&width=967&height=967");
+  background-image: url("https://imgur.com/MyKOLD8");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -433,7 +433,7 @@ html, body {
     }
 
     #login-container {
-      background-image: url("https://media.discordapp.net/attachments/1382924288213909536/1392481545780068392/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30.png?ex=686fb0ff&is=686e5f7f&hm=9003b6fbd5ea37fe347145a2e629372c1ae96727110bfb0c3e394762c0e2698c&=&format=webp&quality=lossless&width=967&height=967");
+      background-image: url("https://imgur.com/MyKOLD8");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -485,7 +485,7 @@ html, body {
 
   background-image:
     linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 0%, rgba(0, 0, 0, 0.95) 80%),
-    url("https://media.discordapp.net/attachments/1382924288213909536/1392475444992802826/Picsart_25-07-09_13-56-16-028_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30.png?ex=68705411&is=686f0291&hm=4c86d1518557b86a017db4c41834bb4f1496b56445e55113c29b6425c0c227a2&=&format=webp&quality=lossless&width=967&height=967");
+    url("https://imgur.com/qqHZASm");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
