--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ margin-top: 1 px;
 
 
 #register-container {
-  background-image: url("https://imgur.com/MyKOLD8");
+  background-image: url("https://i.imgur.com/MyKOLD8.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -433,7 +433,7 @@ html, body {
     }
 
     #login-container {
-      background-image: url("https://imgur.com/MyKOLD8");
+      background-image: url("https://i.imgur.com/MyKOLD8.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -483,9 +483,9 @@ html, body {
   min-height: 100vh;
   text-align: center;
 
-  background-image:
+ background-image:
     linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 0%, rgba(0, 0, 0, 0.95) 80%),
-    url("https://imgur.com/qqHZASm");
+    url("https://i.imgur.com/qqHZASm.jpg");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
