--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ margin-top: 1 px;
 
 
 #register-container {
-  background-image: url("https://i.imgur.com/MyKOLD8.jpeg");
+  background-image: url("https://cdn.discordapp.com/attachments/1382924288213909536/1393049726122721431/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30_1.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -433,7 +433,7 @@ html, body {
     }
 
     #login-container {
-      background-image: url("https://i.imgur.com/MyKOLD8.jpeg");
+      background-image: url("https://cdn.discordapp.com/attachments/1382924288213909536/1393049726122721431/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30_1.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -485,7 +485,7 @@ html, body {
 
   background-image:
     linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 0%, rgba(0, 0, 0, 0.95) 80%),
-    url("https://i.imgur.com/qqHZASm.jpeg");
+    url("https://cdn.discordapp.com/attachments/1382924288213909536/1393049721668505670/Picsart_25-07-09_13-56-16-028_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30_1.png");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
