--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ html, body {
 
   background-image:
     linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 0%, rgba(0, 0, 0, 0.95) 80%),
-    url("https://celadon-griffin-eb0875.netlify.app/wallpaper.png.png");
+    url("https://media.discordapp.net/attachments/1382924288213909536/1393049721668505670/Picsart_25-07-09_13-56-16-028_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30_1.png?ex=6871c227&is=687070a7&hm=a1a6de2d9d2c3b67b13ecb484d0fc7817e0a21041ae24ded6a56d5a6524796bc&=&format=webp&quality=lossless&width=873&height=873");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
