--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>patounic 🍿</title>
   <link rel="icon" href="https://media.discordapp.net/attachments/1381522672558669843/1392046188693553262/1333894209119453256.webp?width=86&height=86" />
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30 (1).webp">
-
+<link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.webp">
   <style>
 .section {
   margin: 1rem 0;
@@ -487,7 +487,7 @@ html, body {
 
   background-image:
     linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 0%, rgba(0, 0, 0, 0.95) 80%),
-    url("https://cdn.jsdelivr.net/gh/patounic/patounic/imagem/wallpaper.png.webp");
+    url("https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.webp");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
