--- a/index.html
+++ b/index.html
@@ -248,8 +248,9 @@ margin-top: 1 px;
   display: none; /* Chrome, Safari */
 }
 .video-card {
-  width: 400px;
-  height: 220px;
+  width: 360px;
+  height: 160px;
+  border-radius: 12px;
   background-color: #000;
   background-size: cover;
   background-position: center;
