--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   border-radius: 8px;
   pointer-events: none;
   z-index: 0;
-  background-color: black; /* <- Evita a borda branca */
+  background-color: transparent; /* <- Evita a borda branca */
   border: none;
   outline: none;
 }
@@ -265,6 +265,7 @@ margin-top: 1 px;
   transition: transform 0.3s ease;
   cursor: pointer;
   position: relative;
+overflow: hidden;
 }
 
 .video-card:hover {
