--- a/index.html
+++ b/index.html
@@ -116,20 +116,20 @@
   pointer-events: none;
 }
 
+
 .preview-video {
   display: none;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: -10%;
+  left: -10%;
+  width: 120%;
+  height: 120%;
   object-fit: cover;
-  border-radius: 8px;
-  pointer-events: none;
   z-index: 0;
-  background-color: transparent; /* <- Evita a borda branca */
   border: none;
   outline: none;
+  background-color: black;
+  border-radius: 13px; /* pode tirar se quiser ignorar bordas */
 }
 
 
@@ -248,24 +248,18 @@ margin-top: 1 px;
   display: none; /* Chrome, Safari */
 }
 .video-card {
-  width: 260px;
-  height: 140px;
-  background-color: #000;
-  background-size: cover;
-  background-position: center;
-  border-radius: 13px;
-  flex-shrink: 0;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  padding: 0.5rem;
-  color: white;
-  font-weight: bold;
-  font-family: 'Inter', sans-serif;
-  transition: transform 0.3s ease;
-  cursor: pointer;
-  position: relative;
-overflow: hidden;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+  border: none;
+  outline: none;
+  background-color: black;
+overflow: visible;
 }
 
 .video-card:hover {
